# chengine

./: CMakeLists.txt  README.md
src/: board.cpp  board.h  board.hpp  main.cpp  minimax.h  minimax.hpp  moves.hpp  pawn.cpp  pawn.h  pawn.hpp  piece.h  piece.hpp  piece_factory.cpp  piece_factory.hpp  setup.cpp  setup.hpp
